<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hugopinto.subneteoip.MainActivity">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_margin="16dp"
     android:layout_height="wrap_content">

     <EditText
         android:layout_weight="1"
         android:id="@+id/et1"
         android:layout_width="60dp"
         android:maxLength="3"
         android:inputType="number"
         android:maxLines="1"
         android:hint="@string/valor_defecto_3digitos"
         android:textAlignment="center"
         android:layout_height="wrap_content"
         android:textSize="25sp"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="."
         android:textSize="50sp"/>
     <EditText
         android:layout_weight="1"
         android:id="@+id/et2"
         android:layout_width="60dp"
         android:maxLength="3"
         android:inputType="number"
         android:maxLines="1"
         android:hint="@string/valor_defecto_3digitos"
         android:textAlignment="center"
         android:layout_height="wrap_content"
         android:textSize="25sp"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="."
         android:textSize="50sp"/>
     <EditText
         android:layout_weight="1"
         android:id="@+id/et3"
         android:layout_width="60dp"
         android:maxLength="3"
         android:inputType="number"
         android:maxLines="1"
         android:hint="@string/valor_defecto_3digitos"
         android:textAlignment="center"
         android:layout_height="wrap_content"
         android:textSize="25sp"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="."
         android:textSize="50sp"/>
     <EditText
         android:layout_weight="1"
         android:id="@+id/et4"
         android:layout_width="60dp"
         android:maxLength="3"
         android:inputType="number"
         android:maxLines="1"
         android:hint="@string/valor_defecto_3digitos"
         android:textAlignment="center"
         android:layout_height="wrap_content"
         android:textSize="25sp"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="/"
         android:textSize="30sp"/>
     <EditText
         android:layout_weight="1"
         android:id="@+id/et5"
         android:layout_width="60dp"
         android:maxLength="2"
         android:inputType="number"
         android:maxLines="1"
         android:hint="@string/valor_defecto_2digitos"
         android:textAlignment="center"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         />


 </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >
        <Button
            android:id="@+id/btn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="Procesar"
            android:background="@color/colorBtn"
            android:textColor="@color/colorTxtBtn_procesar"
            android:textStyle="bold"
            android:fontFamily="@string/app_name"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginLeft="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TV_netid"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="#000000"/>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TV_broadcast_id"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="#000000"/>

        <TextView
            android:layout_marginTop="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TV_cantidad_de_ip"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="#000000"/>

        <TextView
            android:layout_marginTop="8dp"
            android:id="@+id/cantip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TV_cant_ip"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="#000000"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#000000"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TV_parte_de_host"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="#000000"/>

        <TextView
            android:layout_marginTop="8dp"
            android:id="@+id/partehost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TV_var_parte_de_host"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="#000000"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#000000"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>






    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:layout_marginRight="8dp"
        >

        <TextView
            android:id="@+id/netid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TV_var_net_id"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#000000"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/broadcast"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TV_var_broadcast_id"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#000000"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_marginTop="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TV_parte_de_red"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/partered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TV_var_parte_de_red"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#000000"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>


    </LinearLayout>

    </LinearLayout>


</LinearLayout>
